--- a/app/07product/views/productinfotickettype.html
+++ b/app/07product/views/productinfotickettype.html
@@ -1,16 +1,7 @@
 <div class="container-fluid form-horizontal">
 	<div class="col-xs-12">
 		
-		<div class="col-xs-12">
-			<div class="col-xs-2 text-right">
-				<br/>
-				<br/>
-				<font face="Courier" size="5">票种</font>
-				<br/>
-				<br/>
-			</div>
-		</div>
-
+	
 		<!--<div class="form-group mt10" ng-if="(saleobj.state == '0') && (util.what != 'info')">
 			<label class="col-xs-1 control-label">添加票种</label>
 			<div class="col-xs-3">
@@ -55,7 +46,7 @@
 					<th class="col-md-1 text-center">票种属性</th>
 					<th class="col-md-2 text-center">有效期开始</th>
 					<th class="col-md-2 text-center">有效期结束</th>
-					<th class="col-md-1 text-center" ng-if="saleobj.state == '0'">操作</th>
+					<!--<th class="col-md-1 text-center" ng-if="saleobj.state == '0'">操作</th>-->
 				</tr>
 			</thead>
 			<tbody>
