二级利润计算

--- a/app/07product/views/p_shareprofit.html
+++ b/app/07product/views/p_shareprofit.html
@@ -51,7 +51,7 @@
 						</div>
 					</div>
 					<div class="col-sm-3 mt10">
-						<font face="Courier" class="text-danger"></font>
+						<font face="Courier" class="text-danger">一级利润率</font>
 					</div>	
 				</div>
 
@@ -70,7 +70,7 @@
 						</div>
 					</div>
 					<div class="col-sm-4 mt10">
-						<font face="Courier" class="text-danger">利润=居游价-成本价*(利润率+1)</font>
+						<font face="Courier" class="text-danger">二级利润=(居游价-成本价)*(1-利润率)</font>
 					</div>	
 				</div>
 			
