--- a/app/07product/views/productinforestrictrule.html
+++ b/app/07product/views/productinforestrictrule.html
@@ -109,7 +109,8 @@
 				</div>
 				<div class="col-sm-6 col-xs-12">
 					<p class="form-control-static text-danger">
-						用户累积购买数量限制，0:不限，其他数字:限制购买个数
+						用户累积购买数量限制，0:不限，其他数字:限制购买数量<br/>
+						产品分类为团产品时，此处填写预定最多预定人数限制，0：不限制
 					</p>
 				</div>
 			</div>
@@ -122,7 +123,8 @@
 				</div>
 				<div class="col-sm-6 col-xs-12">
 					<p class="form-control-static text-danger">
-						用户每次下单购买数量限制，0:不限，其他数字:限制购买个数
+						用户每次下单购买数量限制，0:不限，其他数字:限制购买数量<br/>
+						产品分类为团产品时，此处填写预定最少预定人数限制，0：不限制
 					</p>
 				</div>
 			</div>
