--- a/app/07product/views/p_shareprofit.html
+++ b/app/07product/views/p_shareprofit.html
@@ -66,7 +66,7 @@
 							<!--<p class="form-control" placeholder="利润" ng-model="salefrobj.profit" ng-disabled="true" style="border-radius: 3px">
 								{{(infodata.guide_price-infodata.cost_price*(salefrobj.profit_ratio*0.01+1)).toFixed(2)}}
 							</p>-->
-							<input type="text" class="form-control" placeholder="利润" ng-model="salefrobj.profit">
+							<input type="text" class="form-control" placeholder="利润" ng-model="salefrobj.profit" readonly>
 						</div>
 					</div>
 					<div class="col-sm-4 mt10">
