--- a/app/07product/views/productInfo.html
+++ b/app/07product/views/productInfo.html
@@ -114,7 +114,7 @@
 							<div class="form-group">
 								<label class="col-sm-2 col-xs-12 control-label">审核意见</label>
 								<div class="col-xs-8">
-									<textarea class="form-control" rows="3" ng-model="saleobj.apply_note" placeholder="审核意见,必填"></textarea>
+									<textarea class="form-control" rows="3" ng-model="saleobj.apply_note" placeholder="{{util.apply_note_temp}}"></textarea>
 								</div>
 								<div class="col-xs-12 text-center">
 									<br/>
