创建一元券销售品类型接口更改

--- a/app/22busscustomer/views/vouchersalecreate.html
+++ b/app/22busscustomer/views/vouchersalecreate.html
@@ -54,7 +54,7 @@
 						<label class="col-xs-3 control-label">销售品类别</label>
 						<div class="col-xs-9" >
 							<select class="form-control" ng-model="obj.type"
-				              ng-options="type1.value as type1.label for type1 in typearr"
+				              ng-options="type1.code as type1.label for type1 in typearr"
 				            >
 				            </select>
 						</div>
