--- a/app/21card/views/cardorderinfo.html
+++ b/app/21card/views/cardorderinfo.html
@@ -15,9 +15,9 @@
         </div>
 
         <div class="form-group">
-            <label class="col-xs-6 control-label">产品编号</label>
+            <label class="col-xs-6 control-label">订单名称</label>
             <div class="col-xs-6">
-                <p class="form-control-static">{{obj.product_code}}</p>
+                <p class="form-control-static">{{obj.title}}</p>
             </div>
         </div>
 
@@ -32,7 +32,7 @@
 	        <div class="form-group">
 	            <label class="col-xs-6 control-label">支付金额</label>
 	            <div class="col-xs-6">
-	                <p class="form-control-static">{{obj.pay_fee/100}}</p>
+	                <p class="form-control-static">{{obj.pay_fee/100 | currency : '¥'}}</p>
 	            </div>
 	        </div>
 
@@ -83,9 +83,23 @@
         <div class="col-xs-6">
 
         <div class="form-group">
-            <label class="col-xs-6 control-label">操作方式</label>
+            <label class="col-xs-6 control-label">购买数量</label>
             <div class="col-xs-6">
-                <p class="form-control-static">{{obj.operationname}}</p>
+                <p class="form-control-static">{{obj.num}}</p>
+            </div>
+        </div>
+
+        <div class="form-group">
+            <label class="col-xs-6 control-label">使用数量</label>
+            <div class="col-xs-6">
+                <p class="form-control-static">{{obj.used}}</p>
+            </div>
+        </div>
+
+        <div class="form-group">
+            <label class="col-xs-6 control-label">退票数量</label>
+            <div class="col-xs-6">
+                <p class="form-control-static">{{obj.back}}</p>
             </div>
         </div>
 
@@ -96,17 +110,24 @@
             </div>
         </div>
 
-        <div class="form-group">
-            <label class="col-xs-6 control-label">分销商</label>
+        <div class="form-group" ng-show = "obj.order_type == '1'">
+            <label class="col-xs-6 control-label">卡号</label>
             <div class="col-xs-6">
-                <p class="form-control-static">{{obj.seller_code}}</p>
+                <p class="form-control-static">{{obj.cardno}}</p>
+            </div>
+        </div>
+
+        <div class="form-group">
+            <label class="col-xs-6 control-label">是否绑定用户信息</label>
+            <div class="col-xs-6">
+                <p class="form-control-static">{{obj.operationname}}</p>
             </div>
         </div>
 
         <div class="form-group">
             <label class="col-xs-6 control-label">姓名</label>
             <div class="col-xs-6">
-                <p class="form-control-static">{{obj.username}}</p>
+                <p class="form-control-static">{{obj.name}}</p>
             </div>
         </div>
 
@@ -120,17 +141,9 @@
         <div class="form-group">
             <label class="col-xs-6 control-label">身份证</label>
             <div class="col-xs-6">
-                <p class="form-control-static">{{obj.papersno}}</p>
+                <p class="form-control-static">{{obj.idnumber}}</p>
             </div>
         </div>
-
-        <div class="form-group">
-            <label class="col-xs-6 control-label">绑定卡号</label>
-            <div class="col-xs-6">
-                <p class="form-control-static">{{obj.cardno}}</p>
-            </div>
-        </div>
-
 
         <div class="form-group">
             <label class="col-xs-6 control-label">下单时间</label>
