--- a/app/21card/views/cardproduct.html
+++ b/app/21card/views/cardproduct.html
@@ -17,7 +17,7 @@
 	</div>
 
 	<div class="form-group">
-		<label class="col-xs-3 control-label">卡产品类型</label>
+		<label class="col-xs-3 control-label">卡产品分类</label>
 		<div class="col-xs-9">
 			<select class="form-control" ng-model="obj.card_type" 
               ng-options="cardtype.value as cardtype.label for cardtype in cardtypearr"
@@ -52,12 +52,12 @@
 	</div>
 
 	<div class="form-group">
-	    <label class="col-xs-3 control-label">操作方式</label>
+	    <label class="col-xs-3 control-label">是否绑定用户信息</label>
 	    <div class="col-xs-9">
 	    	<label class="radio-inline">
 			  <input type="radio" name="operation" value="1"
 			  ng-model="obj.operation"
-			  > 激活
+			  > 不绑定
 			</label>
 			<label class="radio-inline">
 			  <input type="radio" name="operation" value="2"
