--- a/app/21card/views/cardproductlist.html
+++ b/app/21card/views/cardproductlist.html
@@ -16,7 +16,7 @@
                   &nbsp;&nbsp;&nbsp;&nbsp;
                   <input type="text" class="form-control" ng-model="searchform.update_by" placeholder="登录账号">
                   &nbsp;&nbsp;&nbsp;&nbsp;
-                  <label class="control-label">产品类型</label>&nbsp;&nbsp;
+                  <label class="control-label">产品分类</label>&nbsp;&nbsp;
                   <select class="form-control" ng-model="searchform.card_type"
 		              ng-options="type.value as type.label for type in typearr">
 		            	<option label="查询全部" value=""></option>
@@ -40,7 +40,7 @@
       <tr>
       	<th class="col-md-2 text-center">产品编号</th>
         <th class="col-md-3 text-center">产品名称</th>
-        <th class="col-md-1 text-center">产品类型</th>
+        <th class="col-md-1 text-center">产品分类</th>
         <th class="col-md-1 text-center">市场价格</th>
         <th class="col-md-1 text-center">指导价格</th>
         <!--<th class="col-md-2 text-center">绑定卡池名称</th>
