'修改卡订单票信息'

--- a/app/21card/views/ticketinfo.html
+++ b/app/21card/views/ticketinfo.html
@@ -19,6 +19,7 @@
                 <th class="col-md-2 text-center">票下单状态</th>
                 <th class="col-md-2 text-center">票下单时间</th>
                 <th class="col-md-2 text-center">票订单编号</th>
+                <th class="col-md-2 text-center">票外部订单编号</th>
               </tr>
             </thead>
             <tbody>
@@ -30,6 +31,7 @@
                 </td>
                 <td class="text-center">{{ticket.ticket_order_createtime}}</td>
                 <td class="text-center">{{ticket.ticket_order_code}}</td>
+                <td class="text-center">{{ticket.out_order_code}}</td>
               </tr>
             </tbody>
           </table>
