--- a/app/13order/views/orderticketlist.html
+++ b/app/13order/views/orderticketlist.html
@@ -26,11 +26,12 @@
             <thead>
               <tr>
                 <th class="col-md-1 text-center">景区名称</th>
-                <th class="col-md-3 text-center">票名称</th>
+                <th class="col-md-2 text-center">票名称</th>
                 <th class="col-md-1 text-center">票号</th>
                 <th class="col-md-1 text-center">未使用</th>
                 <th class="col-md-1 text-center">未退票</th>
                 <th class="col-md-1 text-center">可用</th>
+                <th class="col-md-1 text-center">最后操作</th>
                 <th class="col-md-4 text-center">时间</th>
               </tr>
             </thead>
@@ -51,6 +52,7 @@
                   <span ng-show="{{obj.state == '1'}}" class="glyphicon glyphicon-ok text-success" aria-hidden="true"></span>
                   <span ng-show="{{obj.state == '0'}}" class="glyphicon glyphicon-remove text-danger" aria-hidden="true"></span>
                 </td>
+                <td class="">{{obj.otime}}</td>
                 <td class="text-center">
                   <span class="col-xs-4">操作时间：</span><span class="col-xs-8">{{obj.otime}}</span>
                   <!-- <br> -->
