--- a/app/22busscustomer/views/setappointment.html
+++ b/app/22busscustomer/views/setappointment.html
@@ -23,7 +23,7 @@
 								<ui-select-match placeholder="请选择一个销售品作为奖品">{{$select.selected.name}}</ui-select-match>
 								<ui-select-choices group-by="'place_name'" repeat="item in datas | filter: $select.search">
 									<span ng-bind-html="item.name | highlight: $select.search"></span>
-									<!--<small ng-bind-html="item.code | highlight: $select.search"></small>-->
+									<small ng-bind-html="item.code | highlight: $select.search"></small>
 								</ui-select-choices>
 		                    </ui-select>
    							
@@ -37,7 +37,7 @@
 								<ui-select-match placeholder="请选择一个票种">{{$select.selected.name}}</ui-select-match>
 								<ui-select-choices group-by="'place_name'" repeat="item in ticketdatas | filter: $select.search">
 									<span ng-bind-html="item.name | highlight: $select.search"></span>
-									<!--<small ng-bind-html="item.code | highlight: $select.search"></small>-->
+									<small ng-bind-html="item.ticket_type_code | highlight: $select.search"></small>
 								</ui-select-choices>
 		                    </ui-select>
    							
