--- a/app/22busscustomer/views/addinstruction.html
+++ b/app/22busscustomer/views/addinstruction.html
@@ -44,7 +44,8 @@
               <!-- <textarea class="form-control" rows="3"
               ng-model="saleobj.detail"
               ></textarea> -->
-        <div text-angular ng-model="saveinfo.explain_content"></div>
+        <div class="ueditor" ng-model="saveinfo.explain_content"></div>      
+        <!--<div text-angular ng-model="saveinfo.explain_content"></div>-->
       </div>
  </div> 
  
