--- a/app/09place/views/p_baseinfo.html
+++ b/app/09place/views/p_baseinfo.html
@@ -40,11 +40,19 @@
 		<div class="form-group" >
 			<label class="col-sm-3 col-xs-12 control-label">简介</label>
 			<div class="col-sm-9 col-xs-12">
-				<textarea class="form-control" rows="4"
+				<!-- <textarea class="form-control" rows="4"
 				ng-model="placeobj.content"
-				></textarea>
+				></textarea> -->
 			</div>
 		</div>
+
+		<div class="form-group" >
+			<label class="col-sm-3 col-xs-12 control-label">简介</label>
+			<div class="col-sm-9 col-xs-12">
+				<div class="ueditor" ng-model="placeobj.content"></div>
+			</div>
+		</div>
+		
 
 		<div class="form-group" >
 			<label class="col-sm-3 col-xs-12 control-label">地点</label>
