--- a/app/07product/views/imgtextinfo.html
+++ b/app/07product/views/imgtextinfo.html
@@ -39,7 +39,7 @@
 
 
 		<div class="form-group">
-			<label class="col-sm-2 col-xs-12 control-label">团产品-预定须知</label>
+			<label class="col-sm-2 col-xs-12 control-label">预定须知</label>
 			<div class="col-sm-9 col-xs-12">
 				<textarea class="form-control" rows="3" ng-disabled="util.what == 'info'" ng-model="saleobj.bookingnotes"></textarea>
 			</div>
