--- a/app/07product/views/productinfoimgtextinfo.html
+++ b/app/07product/views/productinfoimgtextinfo.html
@@ -38,7 +38,7 @@
 
 
 		<div class="form-group">
-			<label class="col-sm-2 col-xs-12 control-label">团产品-预定须知</label>
+			<label class="col-sm-2 col-xs-12 control-label">预定须知</label>
 			<div class="col-sm-9 col-xs-12">
 				<p class="form-control-static" ng-bind-html="saleobj.bookingnotes"></p>
 				<!--<textarea class="form-control" rows="3" ng-disabled="true" ng-model="saleobj.bookingnotes"></textarea>-->
