--- a/app/07product/views/tkttypemodel.html
+++ b/app/07product/views/tkttypemodel.html
@@ -21,8 +21,7 @@
 		<div class="col-xs-6">
 			<!--<select class="form-control" ng-model="objt.place_code" ng-options="view.code as view.name for view in viewarr" ng-disabled="flag">
             </select>-->
-
-			<ui-select ng-model="objt.place_code" theme="bootstrap">
+			<ui-select ng-model="objt.place_code" theme="bootstrap" ng-disabled="id">
 				<ui-select-match placeholder="请选择一个景区">{{$select.selected.name}}</ui-select-match>
 				<ui-select-choices repeat="item.code as item in viewarr | filter: $select.search">
 					<span ng-bind-html="item.name | highlight: $select.search"></span>
