--- a/app/14statistics/views/countByCompny.html
+++ b/app/14statistics/views/countByCompny.html
@@ -77,6 +77,7 @@
 								<option label="电子票" value="1"></option>
 								<option label="团票" value="2"></option>
 							</select> &nbsp;&nbsp;&nbsp;&nbsp;
+							<button type="button btn" class="btn btn-default search pull-right btn-info" ng-click="exportToExcel('#table1')">导出Excel</button>
 							<button type="button btn" class="btn btn-default search pull-right" ng-click="orderSearch()">立即搜索</button>
 						</div>
 					</div>
@@ -86,7 +87,7 @@
 
 		<div class="col-xs-12" ng-if="item.list.length" ng-repeat="item in objs">
 			{{item.code}}
-			<table class="table table-bordered" ng-if="ticket_type_flag == 1">
+			<table id="table1" class="table table-bordered" ng-if="ticket_type_flag == 1">
 				<thead>
 					<tr>
 						<th class="col-md-3 text-center">机构编码</th>
@@ -106,7 +107,7 @@
 					</tr>
 				</tbody>
 			</table>
-			<table class="table table-bordered" ng-if="ticket_type_flag == 2">
+			<table id="table1" class="table table-bordered" ng-if="ticket_type_flag == 2">
 				<thead>
 					<tr>
 						<th class="col-md-3 text-center">机构编码</th>
