--- a/app/21card/views/cardproduct.html
+++ b/app/21card/views/cardproduct.html
@@ -157,6 +157,22 @@
 	    </div>
   	</div>
 
+  	<div class="form-group">
+	    <label class="col-xs-3 control-label">是否出票</label>
+	    <div class="col-xs-9">
+	    	<label class="radio-inline">
+			  <input type="radio" name="outticket" value="0"
+			  ng-model="obj.outticket"
+			  > 出票
+			</label>
+			<label class="radio-inline">
+			  <input type="radio" name="outticket" value="1"
+			  ng-model="obj.outticket"
+			  > 不出票
+			</label>
+	    </div>
+  	</div>
+
   	<div class="form-group form-inline">
 	    <label class="col-xs-3 control-label">红包</label>
 	    <div class="col-xs-9 form-inline">
