--- a/app/14statistics/views/countByCompny.html
+++ b/app/14statistics/views/countByCompny.html
@@ -87,7 +87,7 @@
 
 		<div class="col-xs-12" ng-if="item.list.length" ng-repeat="item in objs">
 			{{item.name}}({{item.code}})
-			<table id="table1" class="table table-bordered" ng-if="ticket_type_flag == 1">
+			<table id="table1" class="table table-bordered" ng-if="ticket_type_flag == 1"  content="text/html; charset=utf-8">
 				<thead>
 					<tr>
 						<th class="col-md-2 text-center">机构编码</th>
@@ -103,7 +103,7 @@
 					<tr ng-repeat="obj in item.list">
 						<td class="text-center">{{obj.company_code}}</td>
 						<td class="text-center">{{obj.company_name}}</td>
-						<td class="text-center">{{obj.sale_code}}</td>
+						<td class="text-center" ng-bind-html="obj.sale_code"></td>
 						<td class="text-center">{{obj.sale_name}}</td>
 						<td class="text-center">{{obj.buy}}</td>
 						<td class="text-center">{{obj.used}}</td>
@@ -111,7 +111,7 @@
 					</tr>
 				</tbody>
 			</table>
-			<table id="table1" class="table table-bordered" ng-if="ticket_type_flag == 2">
+			<table id="table1" class="table table-bordered" ng-if="ticket_type_flag == 2" content="text/html; charset=utf-8">
 				<thead>
 					<tr>
 						<th class="col-md-2 text-center">机构编码</th>
