--- a/app/14statistics/views/countByCompny.html
+++ b/app/14statistics/views/countByCompny.html
@@ -103,7 +103,7 @@
 					<tr ng-repeat="obj in item.list">
 						<td class="text-center">{{obj.company_code}}</td>
 						<td class="text-center">{{obj.company_name}}</td>
-						<td class="text-center" ng-bind-html="obj.sale_code"></td>
+						<td class="text-center">{{obj.sale_code}}</td>
 						<td class="text-center">{{obj.sale_name}}</td>
 						<td class="text-center">{{obj.buy}}</td>
 						<td class="text-center">{{obj.used}}</td>
