--- a/app/14statistics/views/countByCompny.html
+++ b/app/14statistics/views/countByCompny.html
@@ -94,9 +94,9 @@
 						<th class="col-md-2 text-center">机构名称</th>
 						<th class="col-md-2 text-center">产品编码</th>
 						<th class="col-md-3 text-center">产品名称</th>
-						<th class="col-md-1 text-center">购买数量</th>
-						<th class="col-md-1 text-center">使用数量</th>
-						<th class="col-md-1 text-center">退票数量</th>
+						<th class="col-md-1 text-center" style="padding-left:0px;padding-right: 0px;">购买数量</th>
+						<th class="col-md-1 text-center" style="padding-left:0px;padding-right: 0px;">使用数量</th>
+						<th class="col-md-1 text-center" style="padding-left:0px;padding-right: 0px;">退票数量</th>
 					</tr>
 				</thead>
 				<tbody>
@@ -118,9 +118,9 @@
 						<th class="col-md-2 text-center">机构名称</th>
 						<th class="col-md-2 text-center">产品编码</th>
 						<th class="col-md-3 text-center">产品名称</th>
-						<th class="col-md-1 text-center">计划人数</th>
-						<th class="col-md-1 text-center">预订人数</th>
-						<th class="col-md-1 text-center">实际人数</th>
+						<th class="col-md-1 text-center" style="padding-left:0px;padding-right: 0px;">计划人数</th>
+						<th class="col-md-1 text-center" style="padding-left:0px;padding-right: 0px;">预订人数</th>
+						<th class="col-md-1 text-center" style="padding-left:0px;padding-right: 0px;">实际人数</th>
 					</tr>
 				</thead>
 				<tbody>
