--- a/app/14statistics/views/countByCompny.html
+++ b/app/14statistics/views/countByCompny.html
@@ -77,7 +77,7 @@
 								<option label="电子票" value="1"></option>
 								<option label="团票" value="2"></option>
 							</select> &nbsp;&nbsp;&nbsp;&nbsp;
-							<button type="button btn" class="btn btn-default search pull-right btn-info" ng-click="exportToExcel('#table1')">导出Excel</button>
+							<button type="button btn" class="btn btn-default search pull-right btn-info" ng-click="exportToExcel('#Excel_table')">导出Excel</button>
 							<button type="button btn" class="btn btn-default search pull-right" ng-click="orderSearch()">立即搜索</button>
 						</div>
 					</div>
@@ -87,7 +87,7 @@
 
 		<div class="col-xs-12" ng-if="item.list.length" ng-repeat="item in objs">
 			{{item.name}}({{item.code}})
-			<table id="table1" class="table table-bordered" ng-if="ticket_type_flag == 1"  content="text/html; charset=utf-8">
+			<table  class="table table-bordered" ng-if="ticket_type_flag == 1" content="text/html; charset=utf-8">
 				<thead>
 					<tr>
 						<th class="col-md-2 text-center">机构编码</th>
@@ -111,7 +111,7 @@
 					</tr>
 				</tbody>
 			</table>
-			<table id="table1" class="table table-bordered" ng-if="ticket_type_flag == 2" content="text/html; charset=utf-8">
+			<table  class="table table-bordered" ng-if="ticket_type_flag == 2" content="text/html; charset=utf-8">
 				<thead>
 					<tr>
 						<th class="col-md-2 text-center">机构编码</th>
@@ -136,6 +136,36 @@
 				</tbody>
 			</table>
 		</div>
+
+		<!--导出Excel用的表格-->
+		<table ng-show="false" id="Excel_table">
+			<thead>
+				<tr>
+					<th class="col-md-2 text-center">机构编码</th>
+					<th class="col-md-2 text-center">机构名称</th>
+					<th class="col-md-2 text-center">产品编码</th>
+					<th class="col-md-3 text-center">产品名称</th>
+					<th class="col-md-1 text-center">购买数量</th>
+					<th class="col-md-1 text-center">使用数量</th>
+					<th class="col-md-1 text-center">退票数量</th>
+				</tr>
+			</thead>
+			<tbody ng-repeat="item in objs">
+				<tr ng-repeat="obj in item.list">
+					<td class="text-center">{{obj.company_code}}</td>
+					<td class="text-center">{{obj.company_name}}</td>
+					<td class="text-center">{{obj.sale_code}}</td>
+					<td class="text-center">{{obj.sale_name}}</td>
+					<td class="text-center">{{obj.buy}}</td>
+					<td class="text-center">{{obj.used}}</td>
+					<td class="text-center">{{obj.back}}</td>
+				</tr>
+			</tbody>
+		</table>
+		<!--导出Excel用的表格-->
+
+
+
 		<!--<div class="text-right">
 			<uib-pagination total-items="bigTotalItems" ng-model="bigCurrentPage" max-size="maxSize" class="pagination-sm" boundary-links="true"
 			 ng-change="load()" items-per-page="itemsPerPage" previous-text="上一页" next-text="下一页" first-text="首页" last-text="末页" rotate="false">
