积分商城价格处理

--- a/app/22busscustomer/views/integral.html
+++ b/app/22busscustomer/views/integral.html
@@ -30,7 +30,7 @@
 	    <tbody>
 	    	<tr ng-repeat = "obj in objs">
 	        <td class="col-md-2 text-center">{{obj.title}}</td>
-	        <td class="col-md-1 text-center">{{obj.market_price}}</td>
+	        <td class="col-md-1 text-center">{{obj.market_price/100}}</td>
 	        <td class="col-md-3 text-center">{{obj.introduction}}</td>
           <td class="col-md-2 text-center">{{obj.integral}}</td>
           <td class="col-md-2 text-center">{{obj.integra_num}}</td>
