--- a/app/14statistics/views/countByCompny.html
+++ b/app/14statistics/views/countByCompny.html
@@ -145,9 +145,12 @@
 					<th class="col-md-2 text-center">机构名称</th>
 					<th class="col-md-2 text-center">产品编码</th>
 					<th class="col-md-3 text-center">产品名称</th>
-					<th class="col-md-1 text-center">购买数量</th>
-					<th class="col-md-1 text-center">使用数量</th>
-					<th class="col-md-1 text-center">退票数量</th>
+					<th class="col-md-1 text-center" ng-if="ticket_type_flag == 1">购买数量</th>
+					<th class="col-md-1 text-center" ng-if="ticket_type_flag == 1">使用数量</th>
+					<th class="col-md-1 text-center" ng-if="ticket_type_flag == 1">退票数量</th>
+					<th class="col-md-1 text-center" ng-if="ticket_type_flag == 2">计划人数</th>
+					<th class="col-md-1 text-center" ng-if="ticket_type_flag == 2">预订人数</th>
+					<th class="col-md-1 text-center" ng-if="ticket_type_flag == 2">实际人数</th>
 				</tr>
 			</thead>
 			<tbody ng-repeat="item in objs">
@@ -156,9 +159,12 @@
 					<td class="text-center">{{obj.company_name}}</td>
 					<td class="text-center">&nbsp;{{obj.sale_code}}</td>
 					<td class="text-center">{{obj.sale_name}}</td>
-					<td class="text-center">{{obj.buy}}</td>
-					<td class="text-center">{{obj.used}}</td>
-					<td class="text-center">{{obj.back}}</td>
+					<td class="text-center" ng-if="ticket_type_flag == 1">{{obj.buy}}</td>
+					<td class="text-center" ng-if="ticket_type_flag == 1">{{obj.used}}</td>
+					<td class="text-center" ng-if="ticket_type_flag == 1">{{obj.back}}</td>
+					<td class="text-center" ng-if="ticket_type_flag == 2">{{obj.plan_count}}</td>
+					<td class="text-center" ng-if="ticket_type_flag == 2">{{obj.book_count}}</td>
+					<td class="text-center" ng-if="ticket_type_flag == 2">{{obj.actual_count}}</td>
 				</tr>
 			</tbody>
 		</table>
