富文本编辑器

--- a/app/22busscustomer/views/addintegralgoods.html
+++ b/app/22busscustomer/views/addintegralgoods.html
@@ -70,7 +70,7 @@
  <!--<input type="text" class="form-control" id="inputpoolname" placeholder=""
       ng-model="info.content"
       >-->
-      <div text-angular ng-model="info.content"></div>
+      <div class="ueditor" ng-model="info.content"></div>      
  </div>    
  </div>
 
