--- a/app/07product/views/p_shareprofit.html
+++ b/app/07product/views/p_shareprofit.html
@@ -82,9 +82,9 @@
 					</div>
 					<div class="col-xs-2">
 						<div class="input-group">
-							<span class="input-group-addon">¥</span>
 							<input type="number" class="form-control" placeholder="红包金额不能为负数" min='0' step=""
 							ng-model="salefrobj.rebate_lower">
+							<span class="input-group-addon">元</span>							
 						</div>
 					</div>
 					<div class="col-xs-1">
@@ -92,9 +92,9 @@
 					</div>
 					<div class="col-xs-2">
 						<div class="input-group">
-							<span class="input-group-addon">¥</span>
 							<input type="number" class="form-control" placeholder="红包金额不能为负数" min='0' max="" 
 							ng-model="salefrobj.rebate_unlimited">
+							<span class="input-group-addon">元</span>							
 						</div>
 					</div>	
 					<div class="col-sm-3 mt10">
