销售品分润设置可预约

--- a/app/07product/views/p_shareprofit.html
+++ b/app/07product/views/p_shareprofit.html
@@ -140,7 +140,7 @@
 					<br/>
 				<div class="col-xs-12 form-group">
 					<div class="col-xs-2">
-						<label for="lrl" class="pull-right text-right mt10">可否预约&nbsp;&nbsp;&nbsp;&nbsp;</label>
+						<label for="lrl" class="pull-right text-right mt10">可否预约套票&nbsp;&nbsp;&nbsp;&nbsp;</label>
 					</div>
 					<div class="col-xs-2">
 						<div class="input-group">
