--- a/app/07product/views/productinfobaseinfo.html
+++ b/app/07product/views/productinfobaseinfo.html
@@ -13,6 +13,16 @@
 			</div>
 		</div>
 
+		<div class="form-group">
+			<label class="col-sm-2 col-xs-12 control-label">产品名称</label>
+			<div class="col-sm-4 col-xs-12">
+				<p class="form-control-static">{{saleobj.name_inside}}</p>
+			</div>
+			<div class="col-sm-6 mt10">
+				<font face="Courier" class="text-danger">此名称用于内部使用</font>
+			</div>
+		</div>
+
 		<div class="form-group" ng-if="saleobj.code != ''">
 			<label class="col-sm-2 col-xs-12 control-label">产品编码</label>
 			<div class="col-sm-4 col-xs-12">
