--- a/app/07product/views/productinforestrictrule.html
+++ b/app/07product/views/productinforestrictrule.html
@@ -270,7 +270,7 @@
 		</div>
 
 		<div class="form-group">
-			<label class="col-sm-2 col-xs-12 control-label">过期自动退票</label>
+			<label class="col-sm-2 col-xs-12 control-label">自动下架</label>
 			<div class="col-sm-4 col-xs-12">
 				<p ng-if="saleobj.over_period_off == '1'" class="form-control-static">全部票种到期自动下架</p>
 				<p ng-if="saleobj.over_period_off == '0'" class="form-control-static">不启用自动下架</p>
@@ -287,13 +287,13 @@
 			</div>
 			<div class="col-sm-6 col-xs-12">
 				<p class="form-control-static text-danger">
-					是否过期自动退票
+					是否过期自动下架
 				</p>
 			</div>
 		</div>
 
 		<div class="form-group">
-			<label class="col-sm-2 col-xs-12 control-label">过期自动下架通知手机号</label>
+			<label class="col-sm-2 col-xs-12 control-label">下架通知</label>
 			<div class="col-sm-4 col-xs-12">
 				<p class="form-control-static">{{saleobj.over_period_off_mobile}}</p>
 				<!--<p ng-if="saleobj.over_period_off == '1'" class="form-control-static">全部票种到期自动下架</p>
